# HyperExplorer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: Breadcrumb.tsx  CommandPalette.tsx  ContextMenu.tsx  DropModal.tsx  FileIcon.tsx  FileList.tsx  GridView.tsx  PaneContainer.tsx  PreviewPanel.tsx  ResizeDivider.tsx  Sidebar.tsx  SpatialCanvas.tsx  StatusBar.tsx  TabBar.tsx  Toast.tsx  Toolbar.tsx
src/hooks/: useDragContext.ts
src/utils/: format.ts
