[package]
name = "hyperexplorer"
version = "0.1.0"
edition = "2021"

[lib]
name = "hyperexplorer_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "hyperexplorer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
trash = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
dirs = "5"
zip = { version = "2", features = [] }
rayon = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
